Carpentry v1.0.1 release commit
-Removed the capability to import / load data from JSON files.
-Implemented auto-detection of what data type a column should be when importing/loading data from local or remote CSV files. This implementation makes CSVHeaders optional to type in manually.
-CSVHeaders have been renamed to OptionalCSVHeader and OptionalCSVHeaders.
-Updated test classes.
-Updated code documentation.
-More documentation on Carpentry will be posted at some point
-Very recommended to update to version 1.0.1